force-app/main/default/objects/Store_Coupon__c/Store_Coupon__c.object-meta.xml
<CustomObject>
    <label>Store Coupon</label>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>