force-app/main/default/objects/Store_Coupon__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <inlineHelpText>Type of customer account required (e.g., &quot;Walgreens Balance Rewards&quot;, &quot;CVS ExtraCare&quot;)</inlineHelpText>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>