force-app/main/default/objects/Store_Coupon__c/fields/API_Source__c.field-meta.xml
<CustomField>
    <fullName>API_Source__c</fullName>
    <label>API Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>