force-app/main/default/objects/Store_Coupon__c/fields/Applicable_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product_Category__c</fullName>
    <inlineHelpText>The product category this coupon applies to (e.g., Produce, Dairy, Meat &amp; Seafood)</inlineHelpText>
    <label>Applicable Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Meat &amp; Seafood</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
                <default>true</default>
                <label>Pantry</label>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Condiments &amp; Sauces</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>