force-app/main/default/objects/Store_Coupon__c/fields/Clip_URL__c.field-meta.xml
<CustomField>
    <fullName>Clip_URL__c</fullName>
    <label>Clip URL</label>
    <type>Url</type>
</CustomField>