force-app/main/default/objects/Store_Coupon__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOGO</fullName>
                <label>BOGO (Buy One Get One)</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
                <label>Percentage Off</label>
            </value>
            <value>
                <fullName>Dollar Amount</fullName>
                <default>true</default>
                <label>Dollar Amount Off</label>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>