force-app/main/default/objects/Store_Coupon__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>