force-app/main/default/objects/Store_Coupon__c/fields/External_Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Coupon_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Coupon ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>