force-app/main/default/objects/Store_Coupon__c/fields/Is_Stackable__c.field-meta.xml
<CustomField>
    <fullName>Is_Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can this coupon be combined with other offers?</inlineHelpText>
    <label>Is Stackable</label>
    <type>Checkbox</type>
</CustomField>