force-app/main/default/objects/Store_Coupon__c/fields/Requires_Account__c.field-meta.xml
<CustomField>
    <fullName>Requires_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Account</label>
    <type>Checkbox</type>
</CustomField>