force-app/main/default/objects/Store_Coupon__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Ad</fullName>
                <default>true</default>
                <label>Store Ad</label>
            </value>
            <value>
                <fullName>Manufacturer Coupon</fullName>
            </value>
            <value>
                <fullName>Digital Coupon</fullName>
            </value>
            <value>
                <fullName>Rebate App</fullName>
                <label>Rebate App (Ibotta/Fetch)</label>
            </value>
            <value>
                <fullName>Southern Savers</fullName>
            </value>
            <value>
                <fullName>Krazy Coupon Lady</fullName>
            </value>
            <value>
                <fullName>Walgreens API</fullName>
            </value>
            <value>
                <fullName>CVS API</fullName>
            </value>
            <value>
                <fullName>Publix API</fullName>
            </value>
            <value>
                <fullName>API Import</fullName>
                <label>API Import (Generic)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>