force-app/main/default/objects/Store_Coupon__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publix</fullName>
                <default>true</default>
                <label>Publix</label>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Kroger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>